cluster/apps/network/ingress/app/middleware-basic-auth.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: network
spec:
  basicAuth:
    secret: traefik-basic-auth
    removeHeader: true
