cluster/apps/network/ingress/app/middleware-ha-streaming.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ha-streaming
  namespace: network
spec:
  buffering:
    maxRequestBodyBytes: 0
    maxResponseBodyBytes: 0
    memRequestBodyBytes: 0
    memResponseBodyBytes: 0
    retryExpression: ""
