cluster/apps/network/ingress/app/external-https-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pve
  namespace: network
spec:
  ports:
    - port: 8006
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pve
  namespace: network
  labels:
    kubernetes.io/service-name: pve
addressType: IPv4
endpoints:
  - addresses:
      - "${PVE_IP}"
    conditions:
      ready: true
ports:
  - port: 8006
    protocol: TCP
