cluster/apps/network/ingress/app/ingress-routes-https.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pve
  namespace: network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pve.${CLUSTER_DOMAIN}`)
      kind: Rule
      services:
        - name: pve
          port: 8006
          scheme: https
          serversTransport: internal-ca-transport
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: truenas
  namespace: network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`truenas.${CLUSTER_DOMAIN}`)
      kind: Rule
      services:
        - name: truenas
          port: 443
          scheme: https
          serversTransport: internal-ca-transport
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainer.${CLUSTER_DOMAIN}`)
      kind: Rule
      services:
        - name: portainer
          port: 9443
          scheme: https
          serversTransport: internal-ca-transport
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: opnsense
  namespace: network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`opnsense.${CLUSTER_DOMAIN}`)
      kind: Rule
      services:
        - name: opnsense
          port: 443
          scheme: https
          serversTransport: internal-ca-transport
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi
  namespace: network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`unifi.${CLUSTER_DOMAIN}`)
      kind: Rule
      services:
        - name: unifi
          port: 11443
          scheme: https
          serversTransport: internal-ca-transport
  tls: {}
